highlight which methods add coverage